moved remaining files to ts

--- a/package.json
+++ b/package.json
@@ -71,10 +71,10 @@
     "productioncdn": "https://app.trystrand.com/"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --config config/webpack.development.js",
+    "start": "webpack-dev-server --mode development --open --config config/webpack.development.ts",
     "build-cmd": "webpack --mode production",
-    "build-staging": "yarn build-cmd --env.NODE_ENV=staging --output-public-path \"$npm_package_config_stagingcdn\" --config config/webpack.staging.js",
-    "build": "yarn build-cmd --env.NODE_ENV=production --output-public-path \"$npm_package_config_productioncdn\" --config config/webpack.production.js",
+    "build-staging": "yarn build-cmd --env.NODE_ENV=staging --output-public-path \"$npm_package_config_stagingcdn\" --config config/webpack.staging.ts",
+    "build": "yarn build-cmd --env.NODE_ENV=production --output-public-path \"$npm_package_config_productioncdn\" --config config/webpack.production.ts",
     "test": "jest",
     "test-watch": "jest --watch # watches tests related to files changed in git",
     "test-watch-all": "jest --watchAll"
