attempt to resolve .env issue

--- a/env/.env.staging
+++ b/env/.env.staging
@@ -1,10 +1,10 @@
-PORTAL_GRAPHQL_URL=https://staging.api.trystrand.com/graphql
+GRAPHQL_URL=https://staging.api.trystrand.com/graphql
 UI_HOST=https://staging.app.trystrand.com
 SLACK_CLIENT_ID=299839214388.299767954400
 SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
 VERSION=0.1.1
-SENTRY_IO_KEY=595c6b3852d5436181f9174bee265572
-SENTRY_IO_PROJECT=289123
+SENTRY_KEY=595c6b3852d5436181f9174bee265572
+SENTRY_PROJECT_ID=289123
 STRAND_API_DEPENDENCY=0.1.0
