--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "Strand UI",
   "version": "0.1.1",
   "main": "src/index.tsx",
   "types": "src/index.d.ts",
@@ -36,8 +36,6 @@
     "@types/react-dom": "^16.0.4",
     "@types/react-router-dom": "^4.2.4",
     "@types/webpack-merge": "^4.1.2",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.2.2",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
