--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Strand UI",
+  "name": "strand-ui",
   "version": "0.1.1",
   "main": "src/index.tsx",
   "types": "src/index.d.ts",
@@ -19,7 +19,6 @@
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
-    "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
     "raven-js": "^3.22.4",
     "react": "^16.2.0",
