--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "@types/dotenv": "^4.0.2",
+    "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
+    "@types/query-string": "^5.1.0",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
     "@types/react-router-dom": "^4.2.4",
@@ -43,6 +46,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
+    "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
     "eslint": "^4.17.0",
     "eslint-plugin-import": "^2.8.0",
