--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "devDependencies": {
     "@types/dotenv": "^4.0.2",
     "@types/enzyme-adapter-react-16": "^1.0.2",
+    "@types/graphql": "^0.12.4",
     "@types/jest": "^22.1.3",
+    "@types/lodash": "^4.14.104",
     "@types/node": "^9.4.6",
     "@types/query-string": "^5.1.0",
     "@types/react": "^16.0.38",
