--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^16.0.4",
     "@types/react-router-dom": "^4.2.4",
     "@types/webpack-merge": "^4.1.2",
+    "apollo-codegen": "^0.18.8",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
