remove synthetic imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,7 @@
     // Absolute imports start from here
     "baseUrl": ".",
     // Generate source map for debugging purposes
-    "sourceMap": true,
-    // Don't complain on syntax like `import React from 'react'` (vs. `import * as React from 'react')
-    "allowSyntheticDefaultImports": true
+    "sourceMap": true
   }
 }
    
