--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-select": "^1.2.1"
   },
   "devDependencies": {
+    "@types/clean-webpack-plugin": "^0.1.1",
     "@types/dotenv": "^4.0.2",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/graphql": "^0.12.4",
+    "@types/html-webpack-plugin": "^2.30.2",
     "@types/jest": "^22.1.3",
     "@types/lodash": "^4.14.104",
     "@types/node": "^9.4.6",
