--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "jest": "^22.3.0",
     "react-test-renderer": "^16.2.0",
+    "style-loader": "^0.20.2",
     "ts-jest": "^22.4.0",
     "ts-loader": "^4.0.0",
     "ts-node": "^5.0.0",
