--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,13 @@
     "target": "es6",
     // Required option for react-hot-loader
     "module": "commonjs",
-    // Show errors for things that could be typed and are not
     "strict": true,
     "jsx": "react",
     // Absolute imports start from here
     "baseUrl": ".",
-    // Generate source map for debugging purposes
-    "sourceMap": true
+    "sourceMap": true,
+    // Stash these away when doing WebStorm/compile all so they don't get in the way
+    "outDir": "ts-build/"
   }
 }
    
