--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "casual": "^1.5.19",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "dotenv": "^5.0.1",
