--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/clean-webpack-plugin": "^0.1.1",
     "@types/dotenv": "^4.0.2",
     "@types/enzyme-adapter-react-16": "^1.0.2",
+    "@types/faker": "^4.1.2",
     "@types/graphql": "^0.12.4",
     "@types/html-webpack-plugin": "^2.30.2",
     "@types/jest": "^22.1.3",
@@ -53,7 +54,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "casual": "^1.5.19",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "dotenv": "^5.0.1",
@@ -65,6 +65,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
+    "faker": "^4.1.0",
     "file-loader": "^1.1.10",
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "jest": "^22.3.0",
