--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "file-loader": "^1.1.10",
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "jest": "^22.3.0",
+    "moment-timezone": "^0.5.14",
     "react-test-renderer": "^16.2.0",
     "style-loader": "^0.20.2",
     "ts-jest": "^22.4.0",
