HOTFIX: missing new scope

--- a/env/.env.development
+++ b/env/.env.development
@@ -1,7 +1,7 @@
 GRAPHQL_URL=http://localhost:8000/graphql
 UI_HOST=http://strand-ui.ngrok.io
 SLACK_CLIENT_ID=319694506422.319705404998
-SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
+SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user reactions:read"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
 VERSION=0.2.0
