--- a/env/.env.development
+++ b/env/.env.development
@@ -8,3 +8,5 @@ VERSION=0.1.2
 SENTRY_KEY=595c6b3852d5436181f9174bee265572
 SENTRY_PROJECT_ID=289123
 STRAND_API_DEPENDENCY=0.1.0
+STRAND_SLACK_HOST=http://localhost:4000
+STRAND_API_HOST=http://localhost:3000
