--- a/env/.env.production
+++ b/env/.env.production
@@ -8,3 +8,5 @@ VERSION=0.1.2
 SENTRY_KEY=595c6b3852d5436181f9174bee265572
 SENTRY_PROJECT_ID=289123
 STRAND_API_DEPENDENCY=0.1.0
+STRAND_SLACK_HOST=https://slack.trystrand.com
+STRAND_API_HOST=https://api.trystrand.com
