--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
+    "react-markdown": "^3.3.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.2.1"
