cookie storing working locally
moved cookies provider into app so tests pass

pulling user as ref data

displaying username in top right

graphql calls auth'd with js-cookie

bust cache when logging in

left note for cookie assertions

moved cookie name to config

--- a/env/.env.development
+++ b/env/.env.development
@@ -9,4 +9,5 @@ SENTRY_KEY=595c6b3852d5436181f9174bee265572
 SENTRY_PROJECT_ID=289123
 STRAND_API_DEPENDENCY=0.1.0
 STRAND_SLACK_HOST=http://localhost:4000
-STRAND_API_HOST=http://localhost:3000
+STRAND_API_HOST=http://localhost:8000
+AUTH_COOKIE_NAME=strand-auth-token
