--- a/env/.env.production
+++ b/env/.env.production
@@ -10,3 +10,4 @@ SENTRY_PROJECT_ID=289123
 STRAND_API_DEPENDENCY=0.1.0
 STRAND_SLACK_HOST=https://slack.trystrand.com
 STRAND_API_HOST=https://api.trystrand.com
+AUTH_COOKIE_NAME=strand-auth-token
