--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-cache-inmemory": "^1.1.7",
     "apollo-client": "^2.2.3",
     "apollo-client-preset": "^1.0.8",
+    "apollo-link-context": "^1.0.7",
     "apollo-link-http": "^1.3.3",
     "apollo-link-schema": "^1.0.3",
     "axios": "^0.18.0",
@@ -17,6 +18,7 @@
     "graphql": "^0.13.0",
     "graphql-tag": "^2.7.3",
     "graphql-tools": "^2.21.0",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -25,6 +27,7 @@
     "raven-js": "^3.22.4",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
+    "react-cookie": "^2.1.4",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "react-markdown": "^3.3.0",
@@ -36,17 +39,22 @@
     "@types/clean-webpack-plugin": "^0.1.1",
     "@types/dotenv": "^4.0.2",
     "@types/enzyme-adapter-react-16": "^1.0.2",
+    "@types/express": "^4.11.1",
     "@types/faker": "^4.1.2",
     "@types/graphql": "^0.12.4",
     "@types/html-webpack-plugin": "^2.30.2",
     "@types/jest": "^22.1.3",
+    "@types/js-cookie": "^2.1.0",
     "@types/lodash": "^4.14.104",
     "@types/node": "^9.4.6",
     "@types/query-string": "^5.1.0",
     "@types/react": "^16.0.38",
+    "@types/react-cookie": "git+ssh://git@github.com:S64/types-react-cookie.git#v2.1.2-2",
     "@types/react-dom": "^16.0.4",
     "@types/react-router-dom": "^4.2.4",
     "@types/react-select": "^1.2.3",
+    "@types/universal-cookie": "git+ssh://git@github.com:S64/types-universal-cookie.git#v2.1.2-2",
+    "@types/universal-cookie-express": "git+ssh://git@github.com:S64/types-universal-cookie-express.git#v2.1.2-2",
     "@types/webpack-merge": "^4.1.2",
     "apollo-codegen": "^0.18.8",
     "babel-loader": "^7.1.3",
