--- a/env/.env.production
+++ b/env/.env.production
@@ -1,7 +1,7 @@
 GRAPHQL_URL=https://api.trystrand.com/graphql
 UI_HOST=https://app.trystrand.com
 SLACK_CLIENT_ID=10642948979.304937770738
-SLACK_SCOPES="admin commands bot channels:history channels:read channels:write chat:write:user files:write:user"
+SLACK_SCOPES="bot"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
 VERSION=0.1.2
