--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "ts-loader": "^4.0.0",
     "ts-node": "^5.0.0",
     "typescript": "^2.7.2",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.1.0",
