--- a/env/.env.staging
+++ b/env/.env.staging
@@ -1,7 +1,7 @@
 GRAPHQL_URL=https://staging.api.trystrand.com/graphql
 UI_HOST=https://staging.app.trystrand.com
 SLACK_CLIENT_ID=299839214388.299767954400
-SLACK_SCOPES="bot"
+SLACK_SCOPES="bot,commands,channels:history,mpim:history,im:history,groups:history,chat:write:bot"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
 VERSION=0.3.0
