--- a/env/.env.production
+++ b/env/.env.production
@@ -1,7 +1,7 @@
 GRAPHQL_URL=https://api.trystrand.com/graphql
 UI_HOST=https://app.trystrand.com
 SLACK_CLIENT_ID=10642948979.334055392455
-SLACK_SCOPES="bot"
+SLACK_SCOPES="bot,commands,channels:history,mpim:history,im:history,groups:history,chat:write:bot"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
 VERSION=0.3.0
