--- a/env/.env.test
+++ b/env/.env.test
@@ -1,7 +1,7 @@
 GRAPHQL_URL=http://localhost:8000/graphql
 UI_HOST=http://strand-ui.ngrok.io
 SLACK_CLIENT_ID=319694506422.319705404998
-SLACK_SCOPES="bot"
+SLACK_SCOPES="bot,commands,channels:history,mpim:history,im:history,groups:history,chat:write:bot"
 # Need NODE_PATH for absolute imports
 NODE_PATH=src/
 VERSION=0.3.0
